Add job filters, sytle indicator, add missing json translations

--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -96,7 +96,8 @@
     "shippingMethods": "shipping methods",
     "taxCategories": "tax categories",
     "taxRates": "tax rates",
-    "logOut": "log out"
+    "logOut": "log out",
+    "systemStatus": "system status"
   },
   "noFilterField": "None",
   "draft": "Draft",
