--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -55,6 +55,8 @@
     "next": "następny",
     "previous": "poprzedni",
     "perPagePlaceholder": "Elementy na stronę",
+    "page": "Strona {{current}} z {{total}}",
+    "rowsPerPage": "Wiersze na stronę",
     "perPage": {
         "10perPage": "10 na stronę",
         "25perPage": "25 za stronę",
@@ -94,10 +96,11 @@
         "shippingMethods": "metody wysyłki",
         "taxCategories": "kategorie podatkowe",
         "taxRates": "stawki podatkowe",
-        "logOut": "wylogowanie"
+        "logOut": "wylogowanie",
+        "systemStatus": "status systemu"
     },
     "noFilterField": "Brak",
-    "draft": "Wersja robocza",
+    "draft": "Projekt",
     "addingItems": "Dodawanie elementów",
     "arrangingPayment": "Organizowanie płatności",
     "paymentAuthorized": "Autoryzowana płatność",
@@ -106,7 +109,7 @@
     "partiallyShipped": "Częściowo wysłane",
     "partiallyFulfilled": "Częściowo zrealizowane",
     "partiallyDelivered": "Częściowo zrealizowane",
-    "delivered": "Dostarczono",
+    "delivered": "Dostarczone",
     "cancelled": "Anulowane",
     "modifying": "Modyfikacja",
     "inRealization": "W realizacji",
@@ -216,14 +219,14 @@
             "active": "Aktywny",
             "additionalInformation": "Dodatkowe informacje",
             "code": "Kod",
-            "createdAt": "Utworzono w",
+            "createdAt": "Utworzona w",
             "currencyCode": "Kod waluty",
             "customerLastName": "Nazwisko klienta",
             "id": "Id",
             "orderPlacedAt": "Zamówienie złożone pod adresem",
             "shipping": "Wysyłka",
             "shippingWithTax": "Wysyłka z podatkiem",
-            "state": "Państwo",
+            "state": "Stan",
             "subTotal": "Suma cząstkowa",
             "subTotalWithTax": "Suma częściowa z podatkiem",
             "token": "Token",
@@ -232,7 +235,7 @@
             "totalWithTax": "Razem z podatkiem",
             "transactionId": "Identyfikator transakcji",
             "type": "Typ",
-            "updatedAt": "Zaktualizowano w",
+            "updatedAt": "Zaktualizowano o",
             "aggregateOrderId": "Zagregowany identyfikator zamówienia",
             "getProforma": "Pobierz proformę",
             "registeredOnCheckout": "Zarejestrowany przy kasie",
@@ -260,7 +263,7 @@
         },
         "operator": {
             "eq": "Równy",
-            "notEq": "Nie równy",
+            "notEq": "Nie jest równa",
             "contains": "Zawiera",
             "notContains": "Nie zawiera",
             "before": "Przed",
@@ -460,7 +463,7 @@
         "perPageValue": "{{value}} na stronę",
         "confirmButton": "Dodaj zasób",
         "cancel": "Cancel",
-        "noImages": "Nie ma zasobów dla określonego wyszukiwania",
+        "noImages": "Brak zasobów dla określonego wyszukiwania",
         "description": "Przesyłanie i zarządzanie zasobami, które mogą być używane w treści"
     },
     "product": {
@@ -480,17 +483,17 @@
         "gotowka-za-pobraniem": "Za pobraniem",
         "undefined": "Other"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
-    "deleteOrCancel": "Usuń/Anuluj zaznaczone",
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy",
+    "deleteOrCancel": "Wybrano opcję Usuń/Anuluj",
     "actionsMenu": {
         "openMenu": "Otwórz menu",
-        "copyId": "Kopiuj Id",
+        "copyId": "Kopia Id",
         "delete": "Usuń",
         "view": "Widok"
     },
     "toasts": {
         "success": {
-            "update": "Aktualizacja zakończona sukcesem",
+            "update": "Zaktualizowano pomyślnie",
             "upload": "Zasób przesłany pomyślnie"
         },
         "error": {
@@ -524,15 +527,15 @@
         "delete": "Delete",
         "deleteNoteHeader": "Usunąć notatkę?",
         "editNoteHeader": "Edytuj notatkę",
-        "isPrivate": "Uwaga jest prywatna",
+        "isPrivate": "Notatka jest prywatna",
         "isPrivateDescription": "(opcjonalnie)",
         "toAdmins": "Widoczne tylko dla administratorów",
         "toAdminsAndCustomer": "Widoczny dla administratorów i klientów",
-        "sure": "Jesteś pewien?",
+        "sure": "Czy na pewno?",
         "cancel": "Cancel",
         "addComment": "Dodaj komentarz",
         "addCommentButton": "Add comment",
-        "sureDescription": "Usuniętej notatki nie można przywrócić",
+        "sureDescription": "Nie można przywrócić usuniętej notatki",
         "showPayment": "Pokaż płatność",
         "paymentId": "ID płatności: {{value}}",
         "showFulfillment": "Pokaż realizację",
@@ -543,7 +546,7 @@
         "from": "Od:",
         "to": "do:",
         "createdAt": "Utworzono w: {{value}}",
-        "updatedAt": "Updated at: {{value}}",
+        "updatedAt": "Zaktualizowano o: {{value}}",
         "private": "prywatny",
         "public": "publiczny",
         "noteContent": "Treść uwagi:",
