--- a/packages/admin-dashboard/src/locales/pl/customers.json
+++ b/packages/admin-dashboard/src/locales/pl/customers.json
@@ -81,17 +81,17 @@
         "isDefaultBilling": "Domyślny adres wysyłki klienta",
         "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
         "createForCustomer": "Utwórz dla klienta",
-        "inputNameLabel": "Full Name",
+        "inputNameLabel": "Imię i nazwisko",
         "inputNamePlaceholder": "Full Name",
         "inputCompanyLabel": "Nazwa firmy",
         "inputCompanyPlaceholder": "Company Name",
-        "inputPhoneLabel": "Phone Number",
+        "inputPhoneLabel": "Numer telefonu",
         "inputPhonePlaceholder": "Phone Number",
-        "inputPostalLabel": "Postal Code",
+        "inputPostalLabel": "Kod pocztowy",
         "inputPostalPlaceholder": "Postal Code",
-        "inputProvinceLabel": "Province",
+        "inputProvinceLabel": "Prowincja",
         "inputProvincePlaceholder": "Province",
-        "inputCityLabel": "City",
+        "inputCityLabel": "Miasto",
         "inputCityPlaceholder": "City",
         "inputStreetLabel": "Street Line 1",
         "inputStreetPlaceholder": "Street Line 1",
