--- a/packages/admin-dashboard/src/locales/pl/permissions.json
+++ b/packages/admin-dashboard/src/locales/pl/permissions.json
@@ -28,7 +28,7 @@
         "description": "Przyznaje uprawnienia do kolekcji"
     },
     "Country": {
-        "title": "Country",
+        "title": "Kraj",
         "description": "Przyznaje uprawnienia na kraj"
     },
     "Customer": {
