--- a/packages/admin-dashboard/src/locales/pl/promotions.json
+++ b/packages/admin-dashboard/src/locales/pl/promotions.json
@@ -31,7 +31,7 @@
             "amountX": "Kwota X",
             "amountY": "Kwota Y",
             "Buy amountX of these variants": "Kup ilość X tych wariantów",
-            "Get amountY of these variants for free": "Zdobądź ilość Y tych wariantów za darmo"
+            "Get amountY of these variants for free": "Uzyskaj ilość Y tych wariantów za darmo"
         }
     },
     "actions": {
