--- a/packages/admin-dashboard/src/locales/pl/stockLocations.json
+++ b/packages/admin-dashboard/src/locales/pl/stockLocations.json
@@ -4,13 +4,13 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
     "table": {
         "id": "Id",
         "name": "Nazwa",
         "description": "Opis",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewStockLocation": "Wyświetl lokalizację zapasów",
