--- a/packages/admin-dashboard/src/locales/pl/admins.json
+++ b/packages/admin-dashboard/src/locales/pl/admins.json
@@ -4,16 +4,16 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
-        "emailAddress": "E-mail",
+        "emailAddress": "Email",
         "role": "Rola",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewAdmin": "Wyświetl administratora",
@@ -45,13 +45,13 @@
         "title": "Usuń administratora",
         "description": "Czy na pewno chcesz usunąć tego administratora?",
         "successMessage": "Administrator został usunięty.",
-        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+        "deleteOrCancel": "Wybrano opcję Usuń/Anuluj"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy",
     "validation": {
         "firstNameRequired": "Imię jest wymagane",
         "lastNameRequired": "Nazwisko jest wymagane",
-        "passwordRequired": "Hasło jest wymagane",
+        "passwordRequired": "Wymagane jest hasło",
         "rolesRequired": "Wybierz co najmniej jedną rolę"
     }
 }
