--- a/packages/admin-dashboard/src/locales/pl/countries.json
+++ b/packages/admin-dashboard/src/locales/pl/countries.json
@@ -4,8 +4,8 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
-    "defaultCountry": "Domyślny kraj",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "defaultCountry": "Kraj domyślny",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
@@ -13,8 +13,8 @@
         "code": "Kod",
         "name": "Nazwa",
         "enabled": "Włączone",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewCountry": "Wyświetl kraj",
@@ -35,7 +35,7 @@
         "countryLoadingError": "Nie udało się załadować kraju o identyfikatorze {{value}}",
         "countryUpdateSuccess": "Kraj został pomyślnie zaktualizowany",
         "countryUpdateError": "Wystąpił błąd:",
-        "countryCreatedSuccess": "Kraj został utworzony pomyślnie",
+        "countryCreatedSuccess": "Kraj został pomyślnie utworzony",
         "countryCreatedError": "Nie udało się utworzyć kraju",
         "countryDeleteSuccess": "Pomyślnie usunięto kraj",
         "countryDeleteError": "Nie udało się usunąć kraju"
@@ -44,7 +44,7 @@
         "title": "Usuń kraj",
         "description": "Czy na pewno chcesz usunąć ten kraj?",
         "successMessage": "Kraj został usunięty.",
-        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+        "deleteOrCancel": "Wybrano opcję Usuń/Anuluj"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy"
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy"
 }
