--- a/packages/admin-dashboard/src/locales/pl/roles.json
+++ b/packages/admin-dashboard/src/locales/pl/roles.json
@@ -4,8 +4,8 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
-    "defaultChannel": "Domyślny kanał",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "defaultChannel": "Kanał domyślny",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
@@ -15,8 +15,8 @@
         "code": "Kod",
         "permissions": "Uprawnienia",
         "channels": "Kanały",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewRole": "Wyświetl rolę",
@@ -39,7 +39,7 @@
         "roleLoadingError": "Nie udało się załadować roli o identyfikatorze {{value}}",
         "roleUpdateSuccess": "Rola została pomyślnie zaktualizowana",
         "roleUpdateError": "Wystąpił błąd:",
-        "roleCreatedSuccess": "Rola została utworzona pomyślnie",
+        "roleCreatedSuccess": "Rola została pomyślnie utworzona",
         "roleCreatedError": "Nie udało się utworzyć roli",
         "roleDeleteSuccess": "Rola została pomyślnie usunięta",
         "roleDeleteError": "Nie udało się usunąć roli"
@@ -48,9 +48,9 @@
         "title": "Usuń rolę",
         "description": "Czy na pewno chcesz usunąć tę rolę?",
         "successMessage": "Rola została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+        "deleteOrCancel": "Wybrano opcję Usuń/Anuluj"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy",
     "validation": {
         "nameRequired": "Nazwa jest wymagana",
         "permissionsRequired": "Wybierz co najmniej jedno uprawnienie",
