--- a/packages/admin-dashboard/src/locales/pl/shippingMethods.json
+++ b/packages/admin-dashboard/src/locales/pl/shippingMethods.json
@@ -4,7 +4,7 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
@@ -12,8 +12,8 @@
         "name": "Nazwa",
         "code": "Kod",
         "modalTitle": "Tytuł modalny",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "columns": "Kolumny"
     },
     "details": {
@@ -41,10 +41,10 @@
         },
         "test": {
             "title": "Testowa metoda wysyłki",
-            "city": "City",
-            "province": "Province",
+            "city": "Miasto",
+            "province": "Prowincja",
             "postalCode": "Kod pocztowy",
-            "country": "Country",
+            "country": "Kraj",
             "button": "Test",
             "eligible": "Kwalifikujący się",
             "notEligible": "Nie kwalifikuje się"
