--- a/packages/admin-dashboard/src/locales/pl/taxCategories.json
+++ b/packages/admin-dashboard/src/locales/pl/taxCategories.json
@@ -4,15 +4,15 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
         "isDefault": "Jest domyślna",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewTaxCategory": "Wyświetl kategorię podatkową",
@@ -29,7 +29,7 @@
         "taxCategoryLoadingError": "Nie udało się załadować kategorii podatkowej o identyfikatorze {{value}}",
         "taxCategoryUpdateSuccess": "Kategoria podatkowa została pomyślnie zaktualizowana",
         "taxCategoryUpdateError": "Wystąpił błąd:",
-        "taxCategoryCreatedSuccess": "Kategoria podatkowa została utworzona pomyślnie",
+        "taxCategoryCreatedSuccess": "Kategoria podatkowa została pomyślnie utworzona",
         "taxCategoryCreatedError": "Nie udało się utworzyć kategorii podatkowej",
         "taxCategoryDeleteSuccess": "Kategoria podatkowa została pomyślnie usunięta",
         "taxCategoryDeleteError": "Nie udało się usunąć kategorii podatkowej. Prawdopodobnie jest ona w użyciu",
@@ -39,7 +39,7 @@
         "title": "Usuń kategorię podatkową",
         "description": "Czy na pewno chcesz usunąć tę kategorię podatkową?",
         "successMessage": "Kategoria podatkowa została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+        "deleteOrCancel": "Wybrano opcję Usuń/Anuluj"
     },
     "validation": {
         "nameRequired": "Nazwa jest wymagana"
